<?xml version="1.0"?>
<package format="3">
  <name>apriltag_ros2</name>
  <version>0.0.0</version>
  <description>
    A ROS2 wrapper of the AprilTag 3 visual fiducial detection algorithm. 
  </description>
  <maintainer email="nano_exp@todo.todo">nano_exp</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>apriltag</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>image_transport</depend> -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>apriltag_ros2_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>